--- a/legstar.avro.cob2avro/src/main/resources/log4j.properties
+++ b/legstar.avro.cob2avro/src/main/resources/log4j.properties
@@ -10,5 +10,5 @@ log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
 # Filter out packages
 log4j.logger.com.legstar=INFO
-log4j.logger.com.legstar.avro.cob2avro=DEBUG
+log4j.logger.com.legstar.avro.cob2avro=INFO
 
