Added a generator tool to produce avro artifacts directly from COBOL copybooks.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
   <modules>
       <module>legstar.avro.translator</module>
+      <module>legstar.avro.generator</module>
       <module>legstar.avro.cob2avro</module>
   </modules>
 
