--- a/legstar.avro.cob2avro/src/test/resources/cob2avrotrans.properties
+++ b/legstar.avro.cob2avro/src/test/resources/cob2avrotrans.properties
@@ -1,5 +1,12 @@
 # ---------------------------------------------------------------------
-# COBOL to Transformers Generator configuration file
+# COBOL to Avro Generator configuration file
+# ---------------------------------------------------------------------
+
+# Java package name prefix for generated avro specific classes
+avroPackagePrefix = legstar.avro.test.specific
+
+# ---------------------------------------------------------------------
+# cob2trans.properties
 # ---------------------------------------------------------------------
 
 # Physical location of the XML schema
