--- a/legstar.avro.cob2avro/pom.xml
+++ b/legstar.avro.cob2avro/pom.xml
@@ -153,6 +153,30 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.5</version>
+          <executions>
+              <execution>
+                  <id>make-assembly</id>
+                  <phase>package</phase>
+                  <goals>
+                      <goal>attached</goal>
+                  </goals>
+                  <configuration>
+                      <appendAssemblyId>false</appendAssemblyId>
+                      <descriptors>
+                          <descriptor>assembly.xml</descriptor>
+                      </descriptors>
+                      <archiverConfig>
+                          <duplicateBehavior>skip</duplicateBehavior>
+                      </archiverConfig>
+                  </configuration>
+              </execution>
+           </executions>
+      </plugin>
+
     </plugins>
 
     <pluginManagement>
