--- a/legstar.avro.translator/pom.xml
+++ b/legstar.avro.translator/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.legsem</groupId>
+    <groupId>com.legsem.legstar</groupId>
     <artifactId>legstar.avro</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
