--- a/legstar.avro.generator/pom.xml
+++ b/legstar.avro.generator/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.legsem.legstar</groupId>
     <artifactId>legstar.avro</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>legstar.avro.generator</artifactId>
