--- a/legstar.avro.cob2avro/pom.xml
+++ b/legstar.avro.cob2avro/pom.xml
@@ -170,6 +170,9 @@
                       </descriptors>
                       <archiverConfig>
                           <duplicateBehavior>skip</duplicateBehavior>
+                          <fileMode>0644</fileMode>
+                          <directoryMode>0755</directoryMode>
+                          <defaultDirectoryMode>0755</defaultDirectoryMode>
                       </archiverConfig>
                   </configuration>
               </execution>
