--- a/legstar.avro.cob2avro/pom.xml
+++ b/legstar.avro.cob2avro/pom.xml
@@ -179,6 +179,17 @@
            </executions>
       </plugin>
 
+      <!-- Test framework -->
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.16</version>
+          <configuration>
+              <!--  Activate yourkit for tests -->
+              <argLine>-agentlib:yjpagent</argLine>
+          </configuration>
+      </plugin>
+
     </plugins>
 
   </build>
