--- a/legstar.avro.translator/pom.xml
+++ b/legstar.avro.translator/pom.xml
@@ -74,13 +74,31 @@
 
   <build>
 
-    <!-- Used for version -->
-    <resources>
-        <resource>
-            <directory>src/main/resources</directory>
-            <filtering>true</filtering>
-        </resource>
-    </resources>
+      <!-- Used for version -->
+      <resources>
+          <resource>
+              <directory>src/main/resources</directory>
+              <filtering>true</filtering>
+          </resource>
+      </resources>
+
+      <plugins>
+  
+          <!-- Make the jar executable (referencing a lib folder for dependencies) -->
+          <plugin>
+              <artifactId>maven-jar-plugin</artifactId>
+              <configuration>
+                  <archive>
+                      <manifest>
+                          <addClasspath>true</addClasspath>
+                          <classpathPrefix>lib/</classpathPrefix>
+                          <mainClass>com.legstar.avro.translator.Cob2AvroMain</mainClass>
+                      </manifest>
+                  </archive>
+              </configuration>
+          </plugin>
+
+      </plugins>
 
   </build>
 
