--- a/legstar.avro.distrib/pom.xml
+++ b/legstar.avro.distrib/pom.xml
@@ -32,6 +32,17 @@
       <artifactId>legstar.avro.cob2avro.hadoop</artifactId>
     </dependency>
 
+    <!-- Hadoop -->
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-mapreduce-client-core</artifactId>
+    </dependency>
+
     <!-- Tests -->
     <dependency>
       <groupId>junit</groupId>
