--- a/legstar.avro.cob2avro/pom.xml
+++ b/legstar.avro.cob2avro/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.legsem.legstar</groupId>
     <artifactId>legstar.avro</artifactId>
-    <version>0.3.0</version>
+    <version>0.3.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>legstar.avro.cob2avro</artifactId>
