--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>com.legsem.legstar</groupId>
   <artifactId>legstar.avro</artifactId>
-  <version>0.3.0</version>
+  <version>0.3.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>legstar.avro</name>
@@ -39,7 +39,7 @@
       <connection>scm:git:https://legsem@github.com/legsem/legstar.avro.git</connection>
       <developerConnection>scm:git:https://legsem@github.com/legsem/legstar.avro.git</developerConnection>
       <url>https://github.com/legsem/legstar.avro.git</url>
-      <tag>legstar.avro-0.3.0</tag>
+      <tag>HEAD</tag>
   </scm> 
 
   <distributionManagement>
