--- a/legstar.avro.translator/pom.xml
+++ b/legstar.avro.translator/pom.xml
@@ -14,12 +14,6 @@
 
   <dependencies>
 
-    <!-- LegStar -->
-    <dependency>
-        <groupId>com.legsem.legstar</groupId>
-        <artifactId>legstar-coxbapi</artifactId>
-    </dependency>
-
     <!-- JSON -->
     <dependency>
         <groupId>org.codehaus.jackson</groupId>
@@ -32,8 +26,8 @@
 
     <!-- XML schema -->
     <dependency>
-      <groupId>org.apache.ws.commons.schema</groupId>
-      <artifactId>XmlSchema</artifactId>
+        <groupId>org.apache.ws.xmlschema</groupId>
+        <artifactId>xmlschema-core</artifactId>
     </dependency>
 
     <!-- Apache utilities -->
@@ -44,6 +38,10 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
     </dependency>
 
     <!-- Logging -->
