--- a/legstar.avro.generator/pom.xml
+++ b/legstar.avro.generator/pom.xml
@@ -14,10 +14,10 @@
 
   <dependencies>
 
-    <!-- LegStar -->
+    <!-- LegStar V2 -->
     <dependency>
-      <groupId>com.legsem.legstar</groupId>
-      <artifactId>legstar-cob2trans</artifactId>
+        <groupId>com.legsem.legstar</groupId>
+        <artifactId>legstar-base-generator</artifactId>
     </dependency>
 
     <!-- Apache avro -->
@@ -44,6 +44,10 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
     </dependency>
 
     <!-- Logging -->
